--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   
   <title>BALLS</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" 
+      type="image/png" 
+      href="https://i.ya-webdesign.com/images/circle-clip-art-png-17.png">
 </head>
 
 <body>
